src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn-lifetimes.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:6:5
   |
LL |     (i, i)
   |     ^^^^^^ expected `&'a i32`, got `&'b i32`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn-lifetimes.rs:6:5
   |
LL |     (i, i)
   |     ^^^^^^

error: aborting due to previous error

